# Programmlama-dillerin-prensiplerin-ikinci-odevi

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  agaclar.txt  makefile
.github/workflows/: build.yml
cpp/: dfa_minimization.cpp  kleene_regex.cpp  nfa_to_dfa.cpp
docs/: GITHUB_DESCRIPTION.md  github-description.md
include/: Bst.hpp  Linkedlist.hpp  Node.hpp  TreeNode.hpp
java/src/VM_odev/: NfaToDfa.java
scripts/: build.ps1  build.sh
src/: Bst.cpp  Linkedlist.cpp  Program.cpp
